packages/skia/lib/src/gen/skia_bindings_native.g.dart

// ignore_for_file: unused_import, unused_local_variable, unused_element, unused_field
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:skia/src/asset.dart')
library;

import 'dart:ffi' as ffi;

import '' as self;

@ffi.Native<ffi.Int32 Function(font_provider_t, ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Int32, ffi.Pointer<ffi.Char>)>()
external int motif_font_provider_add(
  font_provider_t provider,
  ffi.Pointer<ffi.Uint8> data,
  int length,
  int index,
  ffi.Pointer<ffi.Char> family,
);

@ffi.Native<font_provider_t Function()>()
external font_provider_t motif_font_provider_create();

@ffi.Native<ffi.Void Function(font_provider_t)>()
external void motif_font_provider_destroy(
  font_provider_t provider,
);

@ffi.Native<ffi.Int32 Function(font_provider_t)>()
external int motif_font_provider_family_count(
  font_provider_t provider,
);

@ffi.Native<ffi.Size Function(font_provider_t, ffi.Int32, ffi.Pointer<ffi.Char>)>()
external int motif_font_provider_family_name(
  font_provider_t provider,
  int index,
  ffi.Pointer<ffi.Char> buffer,
);

@ffi.Native<ffi.Void Function(paragraph_builder_t, ffi.Pointer<ffi.Char>)>()
external void motif_paragraph_builder_add_text(
  paragraph_builder_t builder,
  ffi.Pointer<ffi.Char> text,
);

@ffi.Native<paragraph_t Function(paragraph_builder_t)>()
external paragraph_t motif_paragraph_builder_build(
  paragraph_builder_t builder,
);

@ffi.Native<paragraph_builder_t Function(paragraph_style_t, font_provider_t)>()
external paragraph_builder_t motif_paragraph_builder_create(
  paragraph_style_t style,
  font_provider_t provider,
);

@ffi.Native<ffi.Void Function(paragraph_builder_t)>()
external void motif_paragraph_builder_destroy(
  paragraph_builder_t builder,
);

@ffi.Native<ffi.Void Function(paragraph_builder_t)>()
external void motif_paragraph_builder_pop_style(
  paragraph_builder_t builder,
);

@ffi.Native<ffi.Void Function(paragraph_builder_t, text_style_t)>()
external void motif_paragraph_builder_push_style(
  paragraph_builder_t builder,
  text_style_t style,
);

@ffi.Native<ffi.Void Function(paragraph_t)>()
external void motif_paragraph_destroy(
  paragraph_t p,
);

@ffi.Native<ffi.Pointer<glyph_metrics> Function(paragraph_t)>()
external ffi.Pointer<glyph_metrics> motif_paragraph_get_glyph_metrics(
  paragraph_t p,
);

@ffi.Native<ffi.Size Function(paragraph_t)>()
external int motif_paragraph_get_glyph_metrics_count(
  paragraph_t p,
);

@ffi.Native<ffi.Pointer<glyph_path> Function(paragraph_t, ffi.Size)>()
external ffi.Pointer<glyph_path> motif_paragraph_get_glyph_path(
  paragraph_t p,
  int index,
);

@ffi.Native<ffi.Double Function(paragraph_t)>()
external double motif_paragraph_get_height(
  paragraph_t p,
);

@ffi.Native<ffi.Pointer<line_metrics> Function(paragraph_t)>()
external ffi.Pointer<line_metrics> motif_paragraph_get_line_metrics(
  paragraph_t p,
);

@ffi.Native<ffi.Size Function(paragraph_t)>()
external int motif_paragraph_get_line_metrics_count(
  paragraph_t p,
);

@ffi.Native<ffi.Double Function(paragraph_t)>()
external double motif_paragraph_get_longest_line(
  paragraph_t p,
);

@ffi.Native<ffi.Void Function(paragraph_t, ffi.Double)>()
external void motif_paragraph_layout(
  paragraph_t p,
  double width,
);

@ffi.Native<paragraph_style_t Function()>()
external paragraph_style_t motif_paragraph_style_create();

@ffi.Native<ffi.Void Function(paragraph_style_t)>()
external void motif_paragraph_style_destroy(
  paragraph_style_t style,
);

@ffi.Native<text_style_t Function()>()
external text_style_t motif_text_style_create();

@ffi.Native<ffi.Void Function(text_style_t)>()
external void motif_text_style_destroy(
  text_style_t style,
);

@ffi.Native<ffi.Size Function(text_style_t)>()
external int motif_text_style_get_font_families_count(
  text_style_t style,
);

@ffi.Native<ffi.Size Function(text_style_t, ffi.Int32, ffi.Pointer<ffi.Char>)>()
external int motif_text_style_get_font_family(
  text_style_t style,
  int index,
  ffi.Pointer<ffi.Char> buffer,
);

@ffi.Native<ffi.Double Function(text_style_t)>()
external double motif_text_style_get_font_size(
  text_style_t style,
);

@ffi.Native<ffi.Void Function(text_style_t, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)>()
external void motif_text_style_set_font_families(
  text_style_t style,
  ffi.Pointer<ffi.Pointer<ffi.Char>> families,
  int count,
);

@ffi.Native<ffi.Void Function(text_style_t, ffi.Double)>()
external void motif_text_style_set_font_size(
  text_style_t style,
  double size,
);

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(font_provider_t)>> get motif_font_provider_destroy =>
      ffi.Native.addressOf(self.motif_font_provider_destroy);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(paragraph_builder_t)>> get motif_paragraph_builder_destroy =>
      ffi.Native.addressOf(self.motif_paragraph_builder_destroy);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(paragraph_t)>> get motif_paragraph_destroy =>
      ffi.Native.addressOf(self.motif_paragraph_destroy);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(paragraph_style_t)>> get motif_paragraph_style_destroy =>
      ffi.Native.addressOf(self.motif_paragraph_style_destroy);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(text_style_t)>> get motif_text_style_destroy =>
      ffi.Native.addressOf(self.motif_text_style_destroy);
}

typedef __builtin_va_list = ffi.Pointer<ffi.Char>;
typedef __darwin_blkcnt_t = __int64_t;
typedef __darwin_blksize_t = __int32_t;
typedef __darwin_clock_t = ffi.UnsignedLong;
typedef Dart__darwin_clock_t = int;
typedef __darwin_ct_rune_t = ffi.Int;
typedef Dart__darwin_ct_rune_t = int;
typedef __darwin_dev_t = __int32_t;
typedef __darwin_fsblkcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsblkcnt_t = int;
typedef __darwin_fsfilcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsfilcnt_t = int;
typedef __darwin_gid_t = __uint32_t;
typedef __darwin_id_t = __uint32_t;
typedef __darwin_ino64_t = __uint64_t;
typedef __darwin_ino_t = __darwin_ino64_t;
typedef __darwin_intptr_t = ffi.Long;
typedef Dart__darwin_intptr_t = int;
typedef __darwin_mach_port_name_t = __darwin_natural_t;
typedef __darwin_mach_port_t = __darwin_mach_port_name_t;
typedef __darwin_mbstate_t = __mbstate_t;
typedef __darwin_mode_t = __uint16_t;
typedef __darwin_natural_t = ffi.UnsignedInt;
typedef Dart__darwin_natural_t = int;
typedef __darwin_nl_item = ffi.Int;
typedef Dart__darwin_nl_item = int;
typedef __darwin_off_t = __int64_t;
typedef __darwin_pid_t = __int32_t;
typedef __darwin_pthread_attr_t = _opaque_pthread_attr_t;
typedef __darwin_pthread_cond_t = _opaque_pthread_cond_t;
typedef __darwin_pthread_condattr_t = _opaque_pthread_condattr_t;

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>> __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

typedef __darwin_pthread_key_t = ffi.UnsignedLong;
typedef Dart__darwin_pthread_key_t = int;
typedef __darwin_pthread_mutex_t = _opaque_pthread_mutex_t;
typedef __darwin_pthread_mutexattr_t = _opaque_pthread_mutexattr_t;
typedef __darwin_pthread_once_t = _opaque_pthread_once_t;
typedef __darwin_pthread_rwlock_t = _opaque_pthread_rwlock_t;
typedef __darwin_pthread_rwlockattr_t = _opaque_pthread_rwlockattr_t;
typedef __darwin_pthread_t = ffi.Pointer<_opaque_pthread_t>;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;
typedef __darwin_rune_t = __darwin_wchar_t;
typedef __darwin_sigset_t = __uint32_t;
typedef __darwin_size_t = ffi.UnsignedLong;
typedef Dart__darwin_size_t = int;
typedef __darwin_socklen_t = __uint32_t;
typedef __darwin_ssize_t = ffi.Long;
typedef Dart__darwin_ssize_t = int;
typedef __darwin_suseconds_t = __int32_t;
typedef __darwin_time_t = ffi.Long;
typedef Dart__darwin_time_t = int;
typedef __darwin_uid_t = __uint32_t;
typedef __darwin_useconds_t = __uint32_t;
typedef __darwin_va_list = __builtin_va_list;
typedef __darwin_wchar_t = ffi.Int;
typedef Dart__darwin_wchar_t = int;
typedef __darwin_wctrans_t = ffi.Int;
typedef Dart__darwin_wctrans_t = int;
typedef __darwin_wctype_t = __uint32_t;
typedef __darwin_wint_t = ffi.Int;
typedef Dart__darwin_wint_t = int;
typedef __int16_t = ffi.Short;
typedef Dart__int16_t = int;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef __int64_t = ffi.LongLong;
typedef Dart__int64_t = int;
typedef __int8_t = ffi.SignedChar;
typedef Dart__int8_t = int;

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

typedef __uint16_t = ffi.UnsignedShort;
typedef Dart__uint16_t = int;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;
typedef __uint64_t = ffi.UnsignedLongLong;
typedef Dart__uint64_t = int;
typedef __uint8_t = ffi.UnsignedChar;
typedef Dart__uint8_t = int;

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

final class font_provider extends ffi.Opaque {}

typedef font_provider_t = ffi.Pointer<font_provider>;

final class glyph_metrics extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double left;

  @ffi.Float()
  external double top;

  @ffi.Float()
  external double right;

  @ffi.Float()
  external double bottom;

  @ffi.Uint16()
  external int id;

  @ffi.Uint16()
  external int font;

  static ffi.Pointer<glyph_metrics> $allocate(
    ffi.Allocator $allocator, {
    required double x,
    required double y,
    required double left,
    required double top,
    required double right,
    required double bottom,
    required int id,
    required int font,
  }) => $allocator<glyph_metrics>()
    ..ref.x = x
    ..ref.y = y
    ..ref.left = left
    ..ref.top = top
    ..ref.right = right
    ..ref.bottom = bottom
    ..ref.id = id
    ..ref.font = font;
}

final class glyph_path extends ffi.Struct {
  @ffi.Uint32()
  external int verb_count;

  @ffi.Uint32()
  external int point_count;

  external ffi.Pointer<ffi.Uint8> verbs;

  external ffi.Pointer<ffi.Float> points;

  static ffi.Pointer<glyph_path> $allocate(
    ffi.Allocator $allocator, {
    required int verb_count,
    required int point_count,
    required ffi.Pointer<ffi.Uint8> verbs,
    required ffi.Pointer<ffi.Float> points,
  }) => $allocator<glyph_path>()
    ..ref.verb_count = verb_count
    ..ref.point_count = point_count
    ..ref.verbs = verbs
    ..ref.points = points;
}

typedef int_fast16_t = ffi.Int16;
typedef Dartint_fast16_t = int;
typedef int_fast32_t = ffi.Int32;
typedef Dartint_fast32_t = int;
typedef int_fast64_t = ffi.Int64;
typedef Dartint_fast64_t = int;
typedef int_fast8_t = ffi.Int8;
typedef Dartint_fast8_t = int;
typedef int_least16_t = ffi.Int16;
typedef Dartint_least16_t = int;
typedef int_least32_t = ffi.Int32;
typedef Dartint_least32_t = int;
typedef int_least64_t = ffi.Int64;
typedef Dartint_least64_t = int;
typedef int_least8_t = ffi.Int8;
typedef Dartint_least8_t = int;
typedef intmax_t = ffi.Long;
typedef Dartintmax_t = int;

final class line_metrics extends ffi.Struct {
  @ffi.Float()
  external double left;

  @ffi.Float()
  external double baseline;

  @ffi.Float()
  external double ascent;

  @ffi.Float()
  external double descent;

  @ffi.Float()
  external double width;

  @ffi.Float()
  external double height;

  @ffi.Uint32()
  external int glyph_start;

  @ffi.Uint32()
  external int glyph_end;

  static ffi.Pointer<line_metrics> $allocate(
    ffi.Allocator $allocator, {
    required double left,
    required double baseline,
    required double ascent,
    required double descent,
    required double width,
    required double height,
    required int glyph_start,
    required int glyph_end,
  }) => $allocator<line_metrics>()
    ..ref.left = left
    ..ref.baseline = baseline
    ..ref.ascent = ascent
    ..ref.descent = descent
    ..ref.width = width
    ..ref.height = height
    ..ref.glyph_start = glyph_start
    ..ref.glyph_end = glyph_end;
}

final class paragraph extends ffi.Opaque {}

final class paragraph_builder extends ffi.Opaque {}

typedef paragraph_builder_t = ffi.Pointer<paragraph_builder>;

final class paragraph_style extends ffi.Opaque {}

typedef paragraph_style_t = ffi.Pointer<paragraph_style>;
typedef paragraph_t = ffi.Pointer<paragraph>;
typedef ptrdiff_t = __darwin_ptrdiff_t;
typedef register_t = ffi.Int64;
typedef Dartregister_t = int;
typedef rsize_t = __darwin_size_t;
typedef syscall_arg_t = u_int64_t;

final class text_style extends ffi.Opaque {}

typedef text_style_t = ffi.Pointer<text_style>;
typedef u_int16_t = ffi.UnsignedShort;
typedef Dartu_int16_t = int;
typedef u_int32_t = ffi.UnsignedInt;
typedef Dartu_int32_t = int;
typedef u_int64_t = ffi.UnsignedLongLong;
typedef Dartu_int64_t = int;
typedef u_int8_t = ffi.UnsignedChar;
typedef Dartu_int8_t = int;
typedef uint_fast16_t = ffi.Uint16;
typedef Dartuint_fast16_t = int;
typedef uint_fast32_t = ffi.Uint32;
typedef Dartuint_fast32_t = int;
typedef uint_fast64_t = ffi.Uint64;
typedef Dartuint_fast64_t = int;
typedef uint_fast8_t = ffi.Uint8;
typedef Dartuint_fast8_t = int;
typedef uint_least16_t = ffi.Uint16;
typedef Dartuint_least16_t = int;
typedef uint_least32_t = ffi.Uint32;
typedef Dartuint_least32_t = int;
typedef uint_least64_t = ffi.Uint64;
typedef Dartuint_least64_t = int;
typedef uint_least8_t = ffi.Uint8;
typedef Dartuint_least8_t = int;
typedef uintmax_t = ffi.UnsignedLong;
typedef Dartuintmax_t = int;
typedef user_addr_t = u_int64_t;
typedef user_long_t = ffi.Int64;
typedef Dartuser_long_t = int;
typedef user_off_t = ffi.Int64;
typedef Dartuser_off_t = int;
typedef user_size_t = u_int64_t;
typedef user_ssize_t = ffi.Int64;
typedef Dartuser_ssize_t = int;
typedef user_time_t = ffi.Int64;
typedef Dartuser_time_t = int;
typedef user_ulong_t = u_int64_t;
typedef wint_t = __darwin_wint_t;
